--- a/EditWeatherWindow.xaml
+++ b/EditWeatherWindow.xaml
@@ -102,7 +102,7 @@
             <TextBlock Text="Температура" Margin="0,0,0,5"/>
             <TextBox x:Name="AddTemperatureTextBox" Padding="5" Margin="0,0,0,10"/>
 
-            <TextBlock Text="Наявність опадів" Margin="0,0,0,5"/>
+            <TextBlock Text="Наявність опадів(0 - Ні, 1 - Так)" Margin="0,0,0,5"/>
             <TextBox x:Name="AddPrecipitationTextBox" Padding="5" Margin="0,0,0,10"/>
 
             <TextBlock Text="Тиск" Margin="0,0,0,5"/>
